[package]
name = "dnac"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
chrono = "0.4.38"
dotenvy = "0.15.7"
jwt = "0.16.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.63"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time", "env-filter"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
